RealisticServices/k8s/07-c1-ingress-gateway-real.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: realistic-gateway
  namespace: mubench-real
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - real-postgres.local
      secretName: mubench-tls
  rules:
    - host: real-postgres.local
      http:
        paths:
          - path: /auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service
                port:
                  number: 8080
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-service
                port:
                  number: 8080
