RealisticServices/k8s/07-c1-kong-real.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-realistic-ingress
  namespace: realistic
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/protocols: "https"
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  tls:
    - hosts:
        - realistic.local
      secretName: realistic-tls
  rules:
    - host: realistic.local
      http:
        paths:
          - path: /profile
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 8080
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 8080
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8080
