RealisticServices/k8s/ingress-nginx-rewrite.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: realistic-ingress
  namespace: realistic
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
    - hosts:
        - realistic.local
      secretName: realistic-tls
  rules:
    - host: realistic.local
      http:
        paths:
          - pathType: Prefix
            path: /api(/|$)(.*)
            backend:
              service:
                name: api-service
                port:
                  number: 8080
          - pathType: Prefix
            path: /auth(/|$)(.*)
            backend:
              service:
                name: auth-service
                port:
                  number: 8080
